Data Binding Init

--- a/app/src/main/res/drawable/bottom_nav_and_play_controls_background.xml
+++ b/app/src/main/res/drawable/bottom_nav_and_play_controls_background.xml
@@ -7,6 +7,6 @@
         android:radius="@dimen/profile_picture_background_radius" />
 
     <solid
-        android:color="?picture_background_color" />
+        android:color="?defaultColorSecondary" />
 
 </shape>
