--- a/app/src/main/res/layout/home_artists_row.xml
+++ b/app/src/main/res/layout/home_artists_row.xml
@@ -1,39 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
+    <data>
+        <variable
+            name="artist"
+            type="com.celerii.playio.mods.Artist" />
+    </data>
 
-    <LinearLayout
-        android:id="@+id/artist_picture_clipper"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/artist_profile_picture_background"
-        android:layout_margin="@dimen/home_artists_row_artist_picture_margin"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/artist_name" >
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <ImageView
-            android:id="@+id/artist_picture"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:contentDescription="@string/artist_picture"/>
+        <LinearLayout
+            android:id="@+id/artist_picture_clipper"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/artist_profile_picture_background"
+            android:layout_margin="@dimen/home_artists_row_artist_picture_margin"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/artist_name"
+            app:clipToOutline="@{true}">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/artist_picture"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:contentDescription="@string/artist_picture"
+                app:image="@{artist.image}"/>
 
-    <TextView
-        android:id="@+id/artist_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:ellipsize="end"
-        android:maxLines="2"
-        app:layout_constraintTop_toBottomOf="@id/artist_picture_clipper"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/artist_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="@{artist.name}"
+            android:textSize="17sp"
+            android:textColor="?defaultTextColor"
+            app:layout_constraintTop_toBottomOf="@id/artist_picture_clipper"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</layout>
