--- a/app/src/main/res/drawable/artist_profile_picture_background.xml
+++ b/app/src/main/res/drawable/artist_profile_picture_background.xml
@@ -3,5 +3,7 @@
     android:shape="oval"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <solid
+        android:color="?picture_background_color" />
 
 </shape>
