--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -1,123 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Activities.BaseActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_nav_and_smart_play_controls_layout" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".Activities.BaseActivity">
 
-    <LinearLayout
-        android:id="@+id/bottom_nav_and_smart_play_controls_layout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginStart="@dimen/standard_top_margin"
-        android:layout_marginEnd="@dimen/standard_top_margin"
-        android:layout_marginBottom="@dimen/standard_top_margin"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <LinearLayout
-            android:id="@+id/smart_play_controls"
-            android:layout_width="match_parent"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:weightSum="1"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/track_art"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="10dp"
-                android:contentDescription="@string/track_art" />
+            android:minHeight="?attr/actionBarSize"
+            android:background="?toolbar_color"
+            app:title=""
+            app:titleTextAppearance="@style/Toolbar.TitleText"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
-                android:id="@+id/track_name"
-                android:layout_width="0dp"
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:maxLines="1"/>
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="?defaultTextColor" />
 
-            <ImageView
-                android:id="@+id/play_button"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="10dp"
-                android:layout_gravity="center"
-                android:src="@drawable/placeholdericon"
-                android:contentDescription="@string/play_button" />
-        </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginTop="@dimen/standard_top_margin"
-            android:layout_marginBottom="@dimen/standard_top_margin"
-            android:layout_marginStart="@dimen/separator_view_edge_margin"
-            android:layout_marginEnd="@dimen/separator_view_edge_margin" />
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottom_nav_and_smart_play_controls_layout" />
 
         <LinearLayout
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
+            android:id="@+id/bottom_nav_and_smart_play_controls_layout"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:weightSum="4"
-            android:orientation="horizontal"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp">
+            android:orientation="vertical"
+            android:layout_marginTop="@dimen/bottom_nav_top_and_base_margin"
+            android:layout_marginStart="@dimen/standard_top_margin"
+            android:layout_marginEnd="@dimen/standard_top_margin"
+            android:layout_marginBottom="@dimen/bottom_nav_top_and_base_margin"
+            android:background="@drawable/bottom_nav_and_play_controls_background"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-            <ImageView
-                android:id="@+id/home"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:src="@drawable/placeholdericon"
-                android:clickable="true"
-                android:focusable="true"
-                android:contentDescription="@string/home_bottom_navigation_button"/>
+            <LinearLayout
+                android:id="@+id/smart_play_controls"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1"
+                android:orientation="horizontal" >
 
-            <ImageView
-                android:id="@+id/tracks"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:src="@drawable/placeholdericon"
-                android:clickable="true"
-                android:focusable="true"
-                android:contentDescription="@string/tracks_bottom_navigation_button"/>
+                <LinearLayout
+                    android:id="@+id/profile_picture_clipper"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/profile_picture_background"
+                    app:layout_constraintTop_toBottomOf="@id/welcome_text"
+                    app:layout_constraintStart_toEndOf="@id/home_seller_text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:clipToOutline="@{true}">
 
-            <ImageView
-                android:id="@+id/artists"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:src="@drawable/placeholdericon"
-                android:clickable="true"
-                android:focusable="true"
-                android:contentDescription="@string/artists_bottom_navigation_button"/>
+                    <ImageView
+                        android:id="@+id/track_art"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:contentDescription="@string/track_art" />
 
-            <ImageView
-                android:id="@+id/albums"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:src="@drawable/placeholdericon"
-                android:clickable="true"
-                android:focusable="true"
-                android:contentDescription="@string/albums_bottom_navigation_button"/>
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/track_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="Ice Prince - Oleku"/>
+
+                <ImageView
+                    android:id="@+id/play_button"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="10dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_play_accent"
+                    android:contentDescription="@string/play_button" />
+            </LinearLayout>
+
+            <View
+                android:id="@+id/separator_view"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginTop="@dimen/standard_top_margin"
+                android:layout_marginBottom="@dimen/standard_top_margin"
+                android:layout_marginStart="@dimen/separator_view_edge_margin"
+                android:layout_marginEnd="@dimen/separator_view_edge_margin" />
+
+            <LinearLayout
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="4"
+                android:orientation="horizontal"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp">
+
+                <ImageView
+                    android:id="@+id/home"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/placeholdericon"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:contentDescription="@string/home_bottom_navigation_button"/>
+
+                <ImageView
+                    android:id="@+id/tracks"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/placeholdericon"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:contentDescription="@string/tracks_bottom_navigation_button"/>
+
+                <ImageView
+                    android:id="@+id/artists"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/placeholdericon"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:contentDescription="@string/artists_bottom_navigation_button"/>
+
+                <ImageView
+                    android:id="@+id/albums"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/placeholdericon"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:contentDescription="@string/albums_bottom_navigation_button"/>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
