--- a/app/src/main/res/layout/home_albums_row.xml
+++ b/app/src/main/res/layout/home_albums_row.xml
@@ -1,37 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
+    <data>
+        <variable
+            name="album"
+            type="com.celerii.playio.mods.Album" />
+    </data>
 
-    <LinearLayout
-        android:id="@+id/album_art_clipper"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/profile_picture_background"
-        android:layout_margin="@dimen/home_artists_row_album_art_margin"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/album_name" >
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <ImageView
-            android:id="@+id/album_art"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:contentDescription="@string/album_art"/>
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/album_art_clipper"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/profile_picture_background"
+            android:layout_margin="@dimen/home_artists_row_album_art_margin"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/album_name"
+            app:clipToOutline="@{true}">
 
-    <TextView
-        android:id="@+id/album_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:ellipsize="end"
-        android:maxLines="2"
-        app:layout_constraintTop_toBottomOf="@id/album_art_clipper"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+            <ImageView
+                android:id="@+id/album_art"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:contentDescription="@string/album_art"
+                app:image="@{album.image}"/>
+        </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/album_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="@{album.name}"
+            app:layout_constraintTop_toBottomOf="@id/album_art_clipper"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
