--- a/app/src/main/res/layout/home_trending_row.xml
+++ b/app/src/main/res/layout/home_trending_row.xml
@@ -1,62 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
+    <data>
+        <variable
+            name="track"
+            type="com.celerii.playio.mods.Track" />
+    </data>
 
-    <LinearLayout
-        android:id="@+id/track_art_clipper"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/profile_picture_background"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" >
+        android:padding="@dimen/home_trending_row_outer_padding">
+
+        <LinearLayout
+            android:id="@+id/track_art_clipper"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/profile_picture_background"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:clipToOutline="@{true}" >
+
+            <ImageView
+                android:id="@+id/track_art"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:contentDescription="@string/track_art"
+                app:image="@{track.image}"/>
+        </LinearLayout>
 
         <ImageView
-            android:id="@+id/track_art"
-            android:layout_width="170dp"
-            android:layout_height="190dp"
-            android:contentDescription="@string/track_art" />
-    </LinearLayout>
+            android:id="@+id/play_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="@dimen/home_trending_row_play_button_margin"
+            android:layout_marginBottom="@dimen/standard_top_margin"
+            android:contentDescription="@string/play_button"
+            android:src="@drawable/ic_play_white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-    <ImageView
-        android:id="@+id/play_button"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_margin="@dimen/home_trending_row_play_button_margin"
-        android:contentDescription="@string/play_button"
-        android:src="@drawable/placeholdericon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        <TextView
+            android:id="@+id/artist"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_marginStart="@dimen/home_trending_row_play_button_margin"
+            android:layout_marginEnd="@dimen/home_trending_row_play_button_margin"
+            android:layout_marginBottom="@dimen/standard_top_margin"
+            android:text="@{track.artist_name}"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/play_button"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-    <TextView
-        android:id="@+id/artist"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:layout_marginStart="@dimen/home_trending_row_play_button_margin"
-        android:layout_marginEnd="@dimen/home_trending_row_play_button_margin"
-        android:layout_marginBottom="@dimen/home_trending_row_play_button_margin"
-        android:text=""
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/play_button"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        <TextView
+            android:id="@+id/track"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_marginStart="@dimen/home_trending_row_play_button_margin"
+            android:layout_marginEnd="@dimen/home_trending_row_play_button_margin"
+            android:text="@{track.name}"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="17sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/play_button"
+            app:layout_constraintBottom_toTopOf="@id/artist" />
 
-    <TextView
-        android:id="@+id/track"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:layout_marginStart="@dimen/home_trending_row_play_button_margin"
-        android:layout_marginEnd="@dimen/home_trending_row_play_button_margin"
-        android:text=""
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/play_button"
-        app:layout_constraintBottom_toTopOf="@id/artist" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
