--- a/app/src/main/res/layout/welcome_toolbar.xml
+++ b/app/src/main/res/layout/welcome_toolbar.xml
@@ -6,6 +6,16 @@
     android:id="@+id/introtoolbar"
     android:minHeight="?attr/actionBarSize"
     android:background="?toolbar_color"
+    android:gravity="center"
     app:titleTextAppearance="@style/Toolbar.TitleText">
+
+    <TextView
+        android:id="@+id/toolbar_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="?defaultTextColor" />
 
 </androidx.appcompat.widget.Toolbar>
