--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.Playio" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">#1c1c1e</item>
+        <item name="colorPrimaryVariant">#1c1c1e</item>
+        <item name="colorOnPrimary">#1c1c1e</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">#E2374D</item>
+        <item name="colorSecondaryVariant">#E2374D</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -19,6 +19,7 @@
         <item name="toolbar_color">#1c1c1e</item>
         <item name="accent_color">#E2374D</item>
         <item name="separator_view_color">#BFD6D5</item>
+        <item name="picture_background_color">#B8B8D6</item>
 
         <!-- Toolbar -->
         <item name="windowActionBar">false</item>
@@ -44,7 +45,12 @@
 
     <style name="HeaderTextView" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">?defaultTextColor</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="ViewMoreTextView" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">?defaultTextColor</item>
+        <item name="android:textSize">17sp</item>
     </style>
 
     <style name="FragmentHeaderTextView" parent="Widget.AppCompat.TextView">
